--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "3.0.4",
     "@reduxjs/toolkit": "^1.5.1",
     "antd-mobile": "^2.3.4",
     "expo": "^42.0.0",
     "expo-status-bar": "~1.0.3",
     "galio-framework": "^0.7.1",
+    "i18n-js": "^3.8.0",
     "install": "^0.13.0",
     "npm": "^7.10.0",
     "react": "16.13.1",
@@ -22,8 +24,8 @@
     "react-native-paper-dates": "^0.4.6",
     "react-native-vector-icons": "^8.1.0",
     "react-native-web": "~0.13.12",
-    "redux": "^4.0.5",
-    "@react-native-community/datetimepicker": "3.0.4"
+    "react-redux": "^7.2.5",
+    "redux": "^4.0.5"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
