--- a/package.json
+++ b/package.json
@@ -1,34 +1,42 @@
 {
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "react-native start",
+    "android": "react-native run-android",
+    "ios": "react-native run-ios",
     "web": "expo start --web",
     "eject": "expo eject"
   },
   "dependencies": {
-    "@react-native-community/datetimepicker": "3.0.4",
+    "@react-native-async-storage/async-storage": "^1.15.14",
     "@reduxjs/toolkit": "^1.5.1",
-    "antd-mobile": "^2.3.4",
     "expo": "^42.0.0",
     "expo-status-bar": "~1.0.3",
-    "galio-framework": "^0.7.1",
     "i18n-js": "^3.8.0",
     "install": "^0.13.0",
     "npm": "^7.10.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+    "react-native": "^0.66.3",
+    "react-native-fs": "^2.18.0",
     "react-native-paper": "^4.7.2",
     "react-native-paper-dates": "^0.4.6",
     "react-native-vector-icons": "^8.1.0",
     "react-native-web": "~0.13.12",
     "react-redux": "^7.2.5",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "redux-persist": "^6.0.0",
+    "redux-persist-fs-storage": "^1.3.0",
+    "expo-splash-screen": "~0.11.2",
+    "expo-updates": "~0.8.1",
+    "react-native-gesture-handler": "~1.10.2",
+    "react-native-reanimated": "~2.2.0",
+    "react-native-screens": "~3.4.0",
+    "react-native-unimodules": "0.14.10"
   },
+  "private": true,
+  "name": "SchedulingApp",
+  "version": "1.0.0",
   "devDependencies": {
-    "@babel/core": "~7.9.0"
-  },
-  "private": true
+    "@babel/core": "^7.9.0"
+  }
 }
